--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.flutterApplication2</string>
+	<string>com.example.sparkuser</string>
 	<key>PROJECT_ID</key>
 	<string>sparkadmin-e85bd</string>
 	<key>STORAGE_BUCKET</key>
